--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "layer-patch",
   "version": "1.0.0",
   "description": "The Layer Patch Parser: Implements the Layer Patch Parser for parsing Layer Patch messages",
+  "keywords": "layer,sdk,websdk,developers,communications,messaging,chat,json,patch",
   "homepage": "https://github.com/layerhq/node-layer-patch",
   "repository": "https://github.com/layerhq/node-layer-patch",
   "author": "Layer developers <michael@layer.com> (https://layer.com)",
@@ -10,7 +11,7 @@
     "test": "grunt test",
     "prepublish": "grunt test"
   },
-  "main": "layer-patch.js",
+  "main": "index.js",
   "repository": {
     "type" : "git",
     "url" : "layerhq/node-layer-patch"
