--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "The Layer Patch Parser: Implements the Layer Patch Parser for parsing Layer Patch messages",
   "keywords": "layer,sdk,websdk,developers,communications,messaging,chat,json,patch",
   "homepage": "https://github.com/layerhq/node-layer-patch",
-  "repository": "https://github.com/layerhq/node-layer-patch",
+  "repository": {
+    "type": "git",
+    "url": "layerhq/node-layer-patch"
+  },
   "author": "Layer developers <michael@layer.com> (https://layer.com)",
   "license": "Apache-2.0",
   "scripts": {
@@ -12,12 +15,9 @@
     "prepublish": "grunt test"
   },
   "main": "index.js",
-  "repository": {
-    "type" : "git",
-    "url" : "layerhq/node-layer-patch"
-  },
-    "devDependencies": {
+  "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-cli": "^0.1.13",
     "grunt-contrib-jasmine": "^1.0.0"
   }
 }
